# face_Symmetry

./: .gitignore  PROJECT_CONTEXT.md  README.md  data_audit_server122.sh  package.json  pyproject.toml  requirements.txt
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
docs/: environment.md  index.md  project-context.md
examples/: landmarks_mouth_droop.json  landmarks_symmetric.json
scripts/: activate_project_env.sh  analyze_comparison_disagreements.py  analyze_v11_grade_v_plus_generalization.py  analyze_v1_mediapipe_full_feature_differences.py  build_core_symmetry_threshold_and_attribution.py  build_facesym_v1_all_images_no_gate_comparison.py  build_facesym_v1_dataset_from_by_name.py  build_low_fpr_feature_rule.py  build_no_manual_feature_validation.py  build_old_all_core_threshold_rule_test_predictions.py  build_old_core_feature_image_thresholds.py  build_optimized_threshold_feature_disease_rule.py  build_stable_weighted_feature_disease_rule.py  build_stroke_media_dataset.py  build_stroke_warning_rule_test_set.py  build_tiered_weight_feature_disease_rule.py  build_top10_patient_disease_rule.py  build_v11_hb_proxy_grading.py  build_v11_role_aware_quality_weighted_fit.py  build_v1_weak_association_score.py  calibrate_v11_hb_proxy_with_review_labels.py  codex_facesymai.sh  codex_session.py  collect_v1_keypoint_dataset.py  compare_v11_grade_v_plus_18_disease_nondisease.py  compare_yolo_vs_facesymai.py  detect_mediapipe_image.py  evaluate_v11_component_weights.py  extract_v11_grade_v_plus_nondisease_review.py  run_in_project_env.sh  (+9 more)
(+141 files in other folders)
